# butty

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml
api/: model.py  service.py  utils.py
api/datasource/: plaid_source.py
api/datastore/: base.py  db.py  model.py
app/web/: main.py
app/web/static/css/: styles.css
app/web/templates/: index.html
app/web/templates/partials/: budget_lines.html  explorer.html  summary_card.html
apps/FinanceKitSync/FinanceKitSync/: ContentView.swift  FinanceKitSync.entitlements  Info.plist
apps/ios/FinanceKitSync/FinanceKitSync.xcodeproj/: project.pbxproj
apps/web/: main.py
apps/web/templates/: index.html
core/: model.py  service.py  utils.py
core/datasource/: model.py  plaid_source.py
core/datastore/: base.py  db.py  model.py
schema/: accounts.sql  budgets.sql  budgets_tags.sql  budgets_transactions.sql  plaid_accounts.sql  seed.test.sql  tags.sql  transactions.sql
scripts/: start_butty.sh  stop_butty.sh
src/: model.py  server.py  utils.py
src/datasource/: plaid_source.py
src/datastore/: db.py  model.py
tests/: test_service.py  test_utils.py
tests/datasource/: test_plaid_source.py
tests/datastore/: test_schema_accounts.py  test_schema_plaid_accounts.py  test_schema_transactions.py  test_sqlite3.py
tests/db/: test_schema_accounts.py  test_schema_budgets.py  test_schema_budgets_tags.py  test_schema_budgets_transactions.py  test_schema_plaid_accounts.py  test_schema_tags.py  test_schema_transactions.py  test_sqlite3.py
(+24 files in other folders)
