[project]
name = "butty"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = ["fastapi", "sqlalchemy", "pydantic", "jinja2", "uvicorn"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "djlint", "pre-commit"]

[tool.setuptools]
packages = ["core"]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "E501", # line length handled by formatter
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
  "--cov=core",
  "--cov-report=term-missing",
  "--cov-report=xml",
]